tests/error/printPointer.tpc
int main(void){
	int * a;
	print(a);
	return 0;
}